--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,29 @@
 ---
 title: "Sophia Yi"
+about:
+  template: jolla
+  image: profile-pic.jpeg
+  links:
+    - icon: linkedin
+      text: LinkedIn
+      href: www.linkedin.com/in/yi-sophia
+    - icon: github
+      text: Github
+      href: https://github.com/y1jinn
 ---
+
+Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending time unicycling and playing with her pet iguana.
+
+## Education
+
+University of California, San Diego | San Diego, CA
+PhD in Mathematics | Sept 2011 - June 2015
+
+Macalester College | St. Paul, MN
+B.A in Economics | Sept 2007 - June 2011
+
+## Experience
+
+Wengo Analytics | Head Data Scientist | April 2018 - present
+
+GeoScynce | Chief Analyst | Spet 2012 - April 2018
